syntax = "proto3";
package thesixnetwork.sixprotocol.protocoladmin;

import "protocoladmin/group.proto";
// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/thesixnetwork/six-protocol/x/protocoladmin/types";

// Msg defines the Msg service.
service Msg {
  rpc CreateGroup(MsgCreateGroup) returns (MsgCreateGroupResponse);
  rpc UpdateGroup(MsgUpdateGroup) returns (MsgUpdateGroupResponse);
  rpc DeleteGroup(MsgDeleteGroup) returns (MsgDeleteGroupResponse);
  rpc AddAdminToGroup(MsgAddAdminToGroup) returns (MsgAddAdminToGroupResponse);
  rpc RemoveAdminFromGroup(MsgRemoveAdminFromGroup)
      returns (MsgRemoveAdminFromGroupResponse);
  // this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreateGroup {
  string creator = 1;
  string name = 2;
}
message MsgCreateGroupResponse {}

message MsgUpdateGroup {
  string creator = 1;
  string name = 2;
}
message MsgUpdateGroupResponse {}

message MsgDeleteGroup {
  string creator = 1;
  string name = 2;
}
message MsgDeleteGroupResponse {}

message MsgAddAdminToGroup {
  string creator = 1;
  string name = 2;
  string address = 3;
}

message MsgAddAdminToGroupResponse {}

message MsgRemoveAdminFromGroup {
  string creator = 1;
  string name = 2;
  string address = 3;
}

message MsgRemoveAdminFromGroupResponse {}

// this line is used by starport scaffolding # proto/tx/message